--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URI="mongodb+srv://sripranathiindupalli:nWNpelGrwaJyW5l0@pa-1.00dakqo.mongodb.net/?retryWrites=true&w=majority&appName=PA-1"
+
+MONGO_URI=mongodb+srv://vedantpawar990:vedant@cluster0.vus6e.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
